# MfxVTK

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
docs/source/: about-vtk.rst  conf.py  cookbook.rst  getting-started.rst  index.rst  list-of-effects.rst
docs/source/effects/: decimate.rst  extract-edges.rst  fill-holes.rst  make-tubes.rst  poke.rst  reduce-edges.rst  reduce-points.rst  sample-points-surface.rst  sample-points-volume.rst  smooth.rst  surface-distance.rst  tetrahedral-wireframe.rst
src/: CMakeLists.txt
src/CppPluginSupport/: CMakeLists.txt  LICENSE.txt
src/mfx_vtk_plugin/: CMakeLists.txt  VtkEffect.cpp  VtkEffect.h  VtkEffectInput.cpp  VtkEffectInput.h  VtkEffectInputDef.cpp  VtkEffectInputDef.h  VtkEffectUtils.cpp  VtkEffectUtils.h  mfx_vtk_plugin.cpp  mfx_vtk_plugin_extra.cpp  mfx_vtk_utils.h  utils.h
src/mfx_vtk_plugin/effects/: VtkDecimateEffect.cpp  VtkDecimateEffect.h  VtkDistanceAlongSurfaceEffect.cpp  VtkDistanceAlongSurfaceEffect.h  VtkExtractEdgesEffect.cpp  VtkExtractEdgesEffect.h  VtkFillHolesEffect.cpp  VtkFillHolesEffect.h  VtkMakeTubesEffect.cpp  VtkMakeTubesEffect.h  VtkPokeEffect.cpp  VtkPokeEffect.h  VtkReduceEdgesEffect.cpp  VtkReduceEdgesEffect.h  VtkSamplePointsSurfaceEffect.cpp  VtkSamplePointsSurfaceEffect.h  VtkSamplePointsVolumeEffect.cpp  VtkSamplePointsVolumeEffect.h  VtkSmoothEffect.cpp  VtkSmoothEffect.h  VtkSurfaceDistanceEffect.cpp  VtkSurfaceDistanceEffect.h  VtkTetrahedralWireframeEffect.cpp  VtkTetrahedralWireframeEffect.h
